# firmware-mod-kit

./: .gitignore  Documentation.md  ProjectHome.md  README.md  WikiHackingVendorFirmwares.md  build-firmware.sh  build-multisquashfs-firmware.sh  check_for_upgrade.sh  cleanup.sh  common.inc  create-reversion-firmware.sh  creating_ipkg_packages.htm  ddwrt-gui-extract.sh  ddwrt-gui-rebuild.sh  extract-firmware.sh  extract-multisquashfs-firmware.sh  firmware_mod_kit.htm  footer.sh  footer.txt  ipkg_install.sh  ipkg_install_all.sh  ipkg_remove.sh  ipkg_remove_all.sh  linksys_footer.sh  old-build.sh  old-extract.sh  shared-ng.inc  transplant-firmware.sh  uncpio.sh  uncramfs_all.sh  unsquashfs_all.sh
src/: Makefile  Makefile.in  addpattern.c  asustrx.c  configure  configure.ac  motorola-bin.c  splitter3.cc  untrx.cc  untrx.h
src/bff/: Makefile  bff_huffman_decompress.c  bffxtractor.py
src/binwalk-0.4.1/docs/: README
src/binwalk-0.4.1/src/: Makefile.in  binwalk.c  binwalk.h  common.c  common.h  configure  configure.ac  filter.c  filter.h  magic.binarch  magic.binwalk  md5.h  mparse.c  mparse.h  update.c  update.h
src/binwalk-1.0/docs/: API  COPYING  README
src/binwalk-1.0/src/: setup.py
src/cramfs-2.x/: GNUmakefile  cramfsck.c  mkcramfs.c
src/cramfsswap/: Makefile  README  cramfsswap.1  cramfsswap.c
src/cramfsswap/debian/: changelog  control  copyright  rules
src/crcalc/: Makefile  README  common.c  common.h  crc.c  crc.h  crc32.c  crcalc.c  crcalc.h  md5.c  patch.c  patch.h
src/firmware-tools/: Makefile  airlink.c  fw.h  mkfwimage.c  mkfwimage2.c  nand_ecc.c  ptgen.c  readme.txt  seama.c  unwdk.py  unzlib.py  wrt400n.c
src/jffs2/: Makefile  mkfs.jffs2  sunjffs2.c  unjffs2
src/mountcp/: Makefile  mountcp  mountsu.c  umountsu.c
src/others/: Makefile
src/others/squashfs-2.0-nb4/: Makefile
src/others/squashfs-2.2-r2-7z/: Makefile  README  global.h  make_logs  mksquashfs.c  mksquashfs.h  need_p7zip_files  need_p7zip_files_h  read_fs.c  read_fs.h  sort.c  squashfs_fs.h  unsquashfs.c
src/others/squashfs-3.0-e2100/: Makefile  mksquashfs.c  read_fs.c  sort.c  unsquashfs.c
src/others/squashfs-3.2-r2/: Makefile  mksquashfs.c  read_fs.c  unsquashfs.c
src/others/squashfs-3.2-r2-hg612-lzma/: Makefile
src/others/squashfs-3.2-r2-lzma/: Makefile  sqmagic.h
src/others/squashfs-3.2-r2-rtn12/: Makefile  mksquashfs.c  read_fs.c  sqlzma.h  unsquashfs.c
src/others/squashfs-3.2-r2-wnr1000/: Makefile  mksquashfs.c  read_fs.c  sort.c  sqlzma.c
src/others/squashfs-3.3/: Makefile  mksquashfs.c  read_fs.c  read_fs.h  sort.c  sort.h  unsquashfs.c
src/others/squashfs-3.3-grml-lzma/: .tmpdeps  .topdeps  .topmsg  Makefile  sqlzma.txt  sqlzma1-449.patch  sqlzma2k-3.3.patch  sqlzma2u-3.3.patch
src/others/squashfs-3.3-lzma/: Makefile
src/others/squashfs-3.4-cisco/: Makefile
src/others/squashfs-3.4-nb4/: Makefile  README.txt  mksquashfs  sqlzma.h  unsquashfs-lzma
src/others/squashfs-4.0-lzma/: Makefile  mksquashfs.c  mksquashfs.c.orig  mksquashfs.h  (+8 more)
src/squashfs-2.1-r2/: Makefile  README  mksquashfs.c  read_fs.c  sort.c  squashfs_fs.h  unsquashfs.c
src/squashfs-3.0/: Makefile  mksquashfs.c  read_fs.c  squashfs_fs.h  unsquashfs.c
src/squashfs-3.0-lzma-damn-small-variant/: Makefile  mksquashfs.c  squashfs_fs.h
src/uncramfs/: Makefile  README  VERSION  cramfs.h  uncramfs-w.pl  uncramfs.c
src/uncramfs-lzma/: Makefile  README  VERSION  cramfs_fs.h  lzma-uncramfs.c
src/webcomp-tools/: Makefile  README  common.c  common.h  webdecomp.c  webdecomp.h
src/wrt_vx_imgtool/: Makefile  imghdr.h  stdafx.cpp  stdafx.h  wrt54gv5_img.cpp
src/yaffs2utils/: CHANGES  Makefile  README  configs.h  endian_convert.c  endian_convert.h  list.h  mkyaffs2.c  mtd-abi.h  nand_ecclayout.h  progress_bar.c  progress_bar.h  safe_rw.c  safe_rw.h  unspare2.c  unyaffs2.c  version.h
(+662 files in other folders)
